k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsheeter-deployment
  labels:
    app: tsheeter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tsheeter
  template:
    metadata:
      labels:
        app: tsheeter
    spec:
      containers:
      - name: tsheeter
        image: <IMAGE>
        ports:
        - name: main-port
          containerPort: 4000
        livenessProbe:
          httpGet:
            path: /
            port: main-port
          initialDelaySeconds: 30
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /
            port: main-port
          failureThreshold: 30
          periodSeconds: 3
