k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tsheeter
spec:
  selector:
    app: tsheeter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
