k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tsheeter-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - tsheeter.dgoeke.io
    secretName: tsheeter-tls
  rules:
  - host: tsheeter.dgoeke.io
    http:
      paths:
      - backend:
          serviceName: tsheeter
          servicePort: 80
